--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thom Dubart - Marchal Immobilier</title>
+    <title>Thomas Dubart - Marchal Immobilier</title>
     <style>
         /* Couleurs personnalisées */
         :root {
@@ -95,16 +95,16 @@
         <!-- Liens vers les réseaux sociaux -->
         <div class="social-links">
             <a href="https://www.instagram.com/dubart.thom/" target="_blank">
-                <i class="fab fa-instagram"></i> Instagram DUBART
+                <i class="fab fa-instagram"></i> Instagram - DUBART
             </a>
             <a href="https://www.facebook.com/profile.php?id=61574036012863" target="_blank">
-                <i class="fab fa-facebook"></i> Facebook DUBART
+                <i class="fab fa-facebook"></i> Facebook - DUBART
             </a>
             <a href="https://www.facebook.com/marchalimmobilier" target="_blank">
-                <i class="fab fa-facebook"></i> Facebook Marchal Immobilier
+                <i class="fab fa-facebook"></i> Facebook - Marchal Immobilier
             </a>
             <a href="https://www.marchalimmobilier.com" target="_blank">
-                <i class="fas fa-globe"></i> Site internet
+                <i class="fas fa-globe"></i> Site internet - Marchal Immobilier
             </a>
         </div>
     </div>
